independance become independence & loc files renamed properly

--- a/localisation/ideas_Arab_l_english.yml
+++ b/localisation/ideas_Arab_l_english.yml
@@ -44,7 +44,7 @@
  Arab_Social2_desc:0 "Put in place to protect the poor, sick and needy"
  Arab_german_advisors:0 "A german miltary mission is assisting us in bringing our army up to western standards"
  Arab_Command:0 "Arab Command"
- Arab_autonomy:0 "Independance movement"
+ Arab_autonomy:0 "Independence movement"
  Arab_autonomy_des:0 "It is time to free ourselves of our shackles"
  Arab_less_export:0 "Nationalised Pipelines"
  Arab_less_export_desc:0 "Our Oil is our own and we shall choose who and when we sell it"
