--- a/localisation/leftovers/curtain_ISR_National_Focus_l_english.yml
+++ b/localisation/leftovers/curtain_ISR_National_Focus_l_english.yml
@@ -30,7 +30,7 @@
  ISR_camp_david_accords:0 "Camp David Accords."
  ISR_camp_david_accords_desc:0 "Give up the Sinai to Egypt for good and show our Arab neighbours we are comitted to peace."
  ISR_air_supremacy:0 "Air Supremacy"
- ISR_air_supremacy_desc:0 "Part of the reason we were victorious in our war for independance was our domination of the skies."
+ ISR_air_supremacy_desc:0 "Part of the reason we were victorious in our war for independence was our domination of the skies."
  ISR_desert_mirage:0 "Desert Mirage"
  ISR_desert_mirage_desc:0 "We should import the latest French fighter Jet the Dassault Mirage to give us a edge over the Arab Mig fighters."
  ISR_attack_jet_focus:0 "Attack Jet focus"
