--- a/localisation/leftovers/IRQ_events_l_english.yml.txt
+++ b/localisation/leftovers/IRQ_events_l_english.yml.txt
@@ -1,17 +1,11 @@
 ﻿l_english:
-  iraq.1.t:0 "Send in the Army to crush the Shia "
-  iraq.1.d:0 "Shia tribes continue to rebel, it is time to show them our full force"
-  iraq.1.a:0 "Show no mercy"
-  iraq.2.t:0 "The battle is won!"
-  iraq.2.d:0 "Although we suffered some loses our men have returned victorious and the Shia tribes are in no position to trouble us again"
-  iraq.2.a:0 "Huzah!"
-  iraq_old.1.t:0 "Iraqi-Anglo Treaty "
-  iraq_old.1.d:0 "The [Root.GetName], [From.GetLeader] and Iraq have contacted us to establish a military technology agreement that will benefit our two nations mutually. The main proposal is the creation of new air doctrines and aircraft..."
-  iraq_old.1.a:0 "We can take advantage of this..."
-  iraq_old.1.b:0 "We will not give our secrets to these people!"
-  iraq_old.2.t:0 "British Accept Iraq-Anglo Treaty"
-  iraq_old.2.d:0 "Our negotiations with the [From.GetName] have been successful. An agreement has been reached where our nations will aid each other in the development of new aircraft units, with a possible extension to other research areas in the future."
-  iraq_old.2.a:0 "This treaty will be a stepping stone to the future."
+  iraq.1.t:0 "Iraqi-Anglo Treaty "
+  iraq.1.d:0 "The [Root.GetName], [From.GetLeader] and Iraq have contacted us to establish a military technology agreement that will benefit our two nations mutually. The main proposal is the creation of new air doctrines and aircraft..."
+  iraq.1.a:0 "We can take advantage of this..."
+  iraq.1.b:0 "We will not give our secrets to these people!"
+  iraq.2.t:0 "British Accept Iraq-Anglo Treaty"
+  iraq.2.d:0 "Our negotiations with the [From.GetName] have been successful. An agreement has been reached where our nations will aid each other in the development of new aircraft units, with a possible extension to other research areas in the future."
+  iraq.2.a:0 "This treaty will be a stepping stone to the future."
   iraq.3.t:0 "British Reject Iraq-Anglo Treaty"
   iraq.3.d:0 "The [From.GetName] has rejected our suggestion for a treaty aimed at advancing aircraft unit research in both countries, presumably fearing our superior weapons would be turned against them."
   iraq.3.a:0 "They have hardly diminished the risks of it now."
@@ -27,8 +21,3 @@
   iraq.7.t:0 "Bakr Sidqi Assasination"
   iraq.7.d:0 "n August 1937, while en route to Turkey, Sidqi was assassinated in the garden of one of the air force bases in Mosul along with Mohammad 'Ali Jawad, the commanding officer of the Royal Iraqi Air Force. Both Sidqi and Jawad were sent as part of a military mission by the Iraqi government in response to an invitation from the Turkish government. Sidqi had stopped in Mosul on August 11 on the way to Turkey to spend the afternoon with Jawed when a soldier named Muhammad 'Ali Talla'fari opened fire, instantly killing both men. The bodies of both men were flown to Baghdad the following day and buried with full military honors."
   iraq.7.a:0 "Rest in peace"
-  iraq.8.t:0 "Golden Square coup"
-  iraq.8.d:0 "Facists seize power in Iraq"
-  iraq.9.t:0 "Anglo–Iraqi War"
-  iraq.9.d:0 "England declares war"
-  
