more loc merging

--- a/localisation/countries_mer_l_english.yml
+++ b/localisation/countries_mer_l_english.yml
@@ -1,10 +1,25 @@
 ﻿l_english:
+ IRQ_conservatism:0 "Iraqi Republic"
+ IRQ_conservatism_DEF:0 "The Iraqi Republic"
+ IRQ_liberalism:0 "Iraqi Republic"
+ IRQ_liberalism_DEF:0 "The Iraqi Republic"
+ IRQ_socialism:0 "Iraqi Republic"
+ IRQ_socialism_DEF:0 "The Iraqi Republic"
  IRQ_fascism:0 "Iraqi State"
  IRQ_fascism_DEF:0 "The Iraqi State"
  IRQ_neutrality:0 "Iraqi Republic"
  IRQ_neutrality_DEF:0 "The Iraqi Republic"
  IRQ_communism:0 "Iraqi Socialist Republic"
  IRQ_communism_DEF:0 "The Iraqi Socialist Republic"
+ IRQ_monarchism:0 "Kingdom of Iraq"
+ IRQ_monarchism_DEF:0 "The Hashemite Kingdom of Iraq"
+ IRQ_conservatism_ADJ:0 "Iraqi"
+ IRQ_liberalism_ADJ:0 "Iraqi"
+ IRQ_socialism_ADJ:0 "Iraqi"
+ IRQ_neutrality_ADJ:0 "Iraqi"
+ IRQ_fascism_ADJ:0 "Iraqi"
+ IRQ_communism_ADJ:0 "Iraqi"
+ IRQ_monarchism_ADJ:0 "Iraqi"
  
  IRQ_REPUBLIC_conservatism:0 "Iraqi Republic"
  IRQ_REPUBLIC_conservatism_DEF:0 "The Iraqi Republic"
