--- a/localisation/decisions_BMP_l_english.yml
+++ b/localisation/decisions_BMP_l_english.yml
@@ -1,21 +1,39 @@
 ﻿l_english:
+#Arab
+ Arab_Mining:0 "Arab Mining Expedition"
+ Arab_Mining_desc:0 ""
+ Arab_Mining_tt:0 "Has completed mining operations"
+ Arab_Search_For_Oil:0 "Search for Oil"
+ Arab_Search_For_Oil_desc:0 ""
+ Arab_Search_For_Oil_tt:0 "Has completed search for oil deposits"
+ Arab_invite:0 "Invite [Root.GetName]"
+ Arab_invite_desc:0 "We will send an invitation to [Root.GetName] to join the Arab League"
+ Arab_invite_build:0 "sponser building projects in [Root.GetName]"
+ Arab_invite_build_desc:0 "It seems that [Root.GetName] is intrested in the Arab League but will need us to sweeten the deal somehow"
+ Arab_invite_bribe:0 "Supply Arms to [Root.GetName]"
+ Arab_invite_bribe_desc:0 "It seems that [Root.GetName] is intrested in the Arab League but will need us to sweeten the deal somehow"
+ Arab_research_standards:0 "Standardise research in [Root.GetName]"
+ Arab_research_standards_desc:0 "we need to standardise research in [Root.GetName] before being able to share ideas, they have of course generously allowed us bear the cost"
+ institute_press_censorship_monarchism_state:0 "Institute Press Censorship"
+ institute_press_censorship_monarchism_state_desc:0 "These are dangerous times and we can't allow dissenting voices to tear our country apart. Restricting the freedom of the press is necessary to ensure that the truth is heard loud and clear."
+ #BMP
   BMP_maintain_explanation:0 "Maintain divisions in the state for [?Root.BMP_maintain_timer|H0] days to pacify rioters in the region.\n"
   BMP_hunt_Riots_tt:0 "Rioting has gotten out of hand, its time to take a more direct approach \n"
-  BMP_Riots_Remove_West:0 "Pacifies rioters in the westbank"
-  BMP_pacify_Riots_West:0 "Pacify the rioters in the westbank"
-  BMP_British_Aid_westbank:0 "Ask for Brittish aid in the Westbank"
-  BMP_British_Aid_westbank_desc:0 "the situation in the westbank is out of hand, we must call in the Brittish"
+  BMP_Riots_Remove_West:0 "Pacifies rioters in the West Bank"
+  BMP_pacify_Riots_West:0 "Pacify the rioters in the West Bank"
+  BMP_British_Aid_westbank:0 "Ask for British aid in the West Bank"
+  BMP_British_Aid_westbank_desc:0 "The situation in the West Bank is out of hand, we must call in the British"
   BMP_Riots_Remove_gaza:0 "Pacifies rioters in the Gaza region"
   BMP_pacify_Riots_gaza:0 "Pacify the rioters in the Gaza region"
-  BMP_British_Aid_gaza:0 "Ask for Brittish aid in Gaza"
-  BMP_British_Aid_gaza_desc:0 "the situation in the Gaza region is out of hand, we must call in the Brittish"
+  BMP_British_Aid_gaza:0 "Ask for British aid in Gaza"
+  BMP_British_Aid_gaza_desc:0 "the situation in the Gaza region is out of hand, we must call in the British"
   BMP_Riots_Remove_israel:0 "Pacifies rioters in Palestine"
   BMP_pacify_Riots_israel:0 "Pacify the rioters in Palestine"
-  BMP_British_Aid_israel:0 "Ask for Brittish aid in Palestine"
-  BMP_British_Aid_israel_desc:0 "the situation in Palestine is out of hand, we must call in the Brittish"
-  BMP_hunt_Riots_West:0 "hunt down the rioters in the Westbank"
-  BMP_hunt_Riots_gaza:0 "hunt down the rioters in Gaza"
-  BMP_hunt_Riots_israel:0 "hunt down the rioters in Palestine"
+  BMP_British_Aid_israel:0 "Ask for British aid in Palestine"
+  BMP_British_Aid_israel_desc:0 "The situation in Palestine is out of hand, we must call in the British"
+  BMP_hunt_Riots_West:0 "Hunt down the rioters in the West Bank"
+  BMP_hunt_Riots_gaza:0 "Hunt down the rioters in Gaza"
+  BMP_hunt_Riots_israel:0 "Hunt down the rioters in Palestine"
   Arab_riot_aid:0 "Aid our Arab brethern in the riots"
   Arab_riot_aid_desc:0 "Too long have our brethern suffered under British rule, we shall lend our support and bring down the Mandate"
   BMP_Irgun_raids:0 "Suspected Irgun activity"
@@ -24,10 +42,10 @@
   Eng_Stable_Mandate:0 "stablise the Mandate"
   Eng_Stable_Mandate:0 "The situation in Palestine is out of control, we must restore order"
   BMP_Riots_raids:0 "Riot activity"
-  BMP_maintain_westbank:0 "Maintain control in the Westbank"
+  BMP_maintain_westbank:0 "Maintain control in the West Bank"
   BMP_maintain_gaza:0 "Maintain control in the Gaza"
   BMP_maintain_israel:0 "Maintain control in Palestine"
-  BMP_Riots_westbank:0 "Riot activity in the Westbank"
+  BMP_Riots_westbank:0 "Riot activity in the West Bank"
   BMP_Riots_gaza:0 "Riot activity in Gaza"
   BMP_Riots_israel:0 "Riot activity in Palestine"
   BMP_brit_aid:0 "British currently assisting"
