--- a/localisation/decisions_mer_l_english.yml
+++ b/localisation/decisions_mer_l_english.yml
@@ -39,7 +39,7 @@
   BMP_Irgun_raids:0 "Suspected Irgun activity"
   BMP_Police_Patrol:0 "Strengthen Police Patrols"
   BMP_Police_Patrol_desc:0 "There has been some underground activity since the signing of the white papers, we may need extra police to handle any trouble"
-  Eng_Stable_Mandate:0 "stablise the Mandate"
+  Eng_Stable_Mandate:0 "Stabilise the Mandate"
   Eng_Stable_Mandate:0 "The situation in Palestine is out of control, we must restore order"
   BMP_Riots_raids:0 "Riot activity"
   BMP_maintain_westbank:0 "Maintain control in the West Bank"
