--- a/localisation/ideas_Arab_l_english.yml
+++ b/localisation/ideas_Arab_l_english.yml
@@ -69,3 +69,11 @@
  socialism_influence:0 "Socialist Ideals"
  Arab_Meddle:0 "Outside support for the Arab Rebels"
  Arab_Meddle_desc:0 "We have noticed an increase in foreign fighters disturbing the peace"
+ Arab_decrpt:0 "Code breaker"
+ Arab_decrpt_tt:0 "Has completed Detection Focus"
+ Arab_encrpt:0 "Encryption Expert"
+ Arab_encrpt_tt:0 "Has completed Scambling Techniques"
+ Arab_Rail_company:0 "National Railways"
+ Arab_Rail_company_tt:0 "Has completed Roads to the Capital"
+ Arab_oil_company:0: "National Petroleum"
+ Arab_oil_company_tt:0 "Has completed National Petroleum Company"
