--- a/localisation/ideas_Arab_l_english.yml
+++ b/localisation/ideas_Arab_l_english.yml
@@ -75,5 +75,5 @@
  Arab_encrpt_tt:0 "Has completed Scambling Techniques"
  Arab_Rail_company:0 "National Railways"
  Arab_Rail_company_tt:0 "Has completed Roads to the Capital"
- Arab_oil_company:0: "National Petroleum"
+ Arab_oil_company:0 "National Petroleum"
  Arab_oil_company_tt:0 "Has completed National Petroleum Company"
