--- a/localisation/focus_BMP_l_english.yml
+++ b/localisation/focus_BMP_l_english.yml
@@ -35,6 +35,8 @@
  BMP_arm_the_mandate_desc:0 "We cannot rely on Great Britain alone if we wish to reach our full potential. We must construct our own weapons and equipment if our army is to succeed."
  BMP_advanced_research:0 "Advanced Research"
  BMP_advanced_research_desc:0 "From the influx of immigrants, we will recruit the best and brightest to conduct our research."
+ BMP_Shared_research:0 "Commonwealth Research"
+ BMP_Shared_research_desc:0 "Our research attempts on our own will always be small, we shall share discoveries with the commonwealth"
  BMP_subsidize_the_mandate:0 "Subsidize the Mandate"
  BMP_subsidize_the_mandate_desc:0 "With Great Britain’s help, we can increase industry and put many of the unsettled immigrants to work."
  BMP_limit_jewish_immigration:0 "Limit Jewish Immigration"
@@ -45,6 +47,7 @@
  BMP_assist_great_britain_desc:0 "The path forward for all the people in the Mandate lies under the leadership of Great Britain. Now is not the time to be brash and dissolve the Mandate, at least not yet."
  BMP_reinforce_the_palestine_police_force:0 "Reinforce the Palestine Police Force"
  BMP_reinforce_the_palestine_police_force_desc:0 "With the Arab Revolt finally quelled, we cannot let anything like it happen again. We should reinforce the Palestine Police Force."
+ BMP_palestine_police_train:0 "Police training"
  BMP_re-establish_the_mandate:0 "Re-establish the Mandate"
  BMP_re-establish_the_mandate_desc:0 "With all of the trouble in Palestine, we must ensure that the Mandate government continues to function as the chief authority in the territory."
  BMP_put_down_the_arab_revolt:0 "Put Down the Arab Revolt"
@@ -83,3 +86,5 @@
  BMP_Underground_Government_desc:0 "We must organise our political systems to be ready to rule in place of Britain"
  BMP_Call_Elections:0 "Call for an Election"
  BMP_Call_Elections_desc:0 "Too long have we heard of the benefits of Democracy without the vote ourselves, In 30 days this country will head to the polls and let the peoples voice be heard"
+ BMP_Steel_Mill:0 "Palestine Foundries and Metal Works"
+ BMP_Steel_Mill_desc:0 "Our developing nation needs a large ferrous metal works to futher our industry"
