--- a/localisation/ideas_Arab_l_english.yml
+++ b/localisation/ideas_Arab_l_english.yml
@@ -64,9 +64,6 @@
  Arab_deterrence3b:0 "Physical Defenses"
  Arab_deterrence3b_desc:0 "With the right defenses we can fortify our nation"
  Arab_focus:0 "Common Arab Focus Tree"
- conservatism_influence:0 "Conservative Ideals"
- liberalism_influence:0 "Liberal Ideals"
- socialism_influence:0 "Socialist Ideals"
  Arab_Meddle:0 "Outside support for the Arab Rebels"
  Arab_Meddle_desc:0 "We have noticed an increase in foreign fighters disturbing the peace"
  Arab_decrpt:0 "Code breaker"
@@ -81,4 +78,11 @@
  Arab_Desert_tank:0 "Light Desert Tanks"
  Arab_tank_manufacturer:0 "Desert Tank Manufacturer"
  Arab_tank_manufacturer_tt:0 "Has completed national tank focus"
+ Arab_fascist_drift:0 "Fascist Ideals"
+ Arab_monarchist_drift:0 "Royal leanings"
+ Arab_communist_drift:0 "Communist goals"
+ Arab_democratic_drift:0 "Democratic inspirations"
+ Arab_liberalism_drift:0 "Liberal Values"
+ Arab_socialism_drift:0 "Socialist Values"
+ Arab_conservatism_drift:0 "Conservative Values"
  
