Localisation condenses, Iraq loc changes to feel more different than common arab

--- a/localisation/ideas_Arab_l_english.yml
+++ b/localisation/ideas_Arab_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+### Common Arab Idea's ####
  Arab_Minor:0 "Arab Minor"
  Arab_Minor_desc:0 "We are a Very small player on the gobal stage and lack the influence of other nations"
  Arab_Minor1:0 "Arab Minor"
@@ -85,4 +86,107 @@
  Arab_liberalism_drift:0 "Liberal Values"
  Arab_socialism_drift:0 "Socialist Values"
  Arab_conservatism_drift:0 "Conservative Values"
- 
+ ##### BMP
+ #BMP Advisors
+ BMP_amin_al-husseini:0 "Amin al-Husseini"
+ BMP_pinhas_rutenberg:0 "Pinhas Rutenberg"
+ BMP_walter_guinness:0 "Walter Guinness"
+ BMP_ernest_bevin:0 "Ernest Bevin"
+ BMP_orde_wingate:0 "Orde Wingate"
+ BMP_evelyn_barker:0 "Evelyn Barker"
+ BMP_charles_tegart:0 "Charles Tegart"
+ BMP_John_Rymer-Jones:0 "John Rymer-Jones"
+ BMP_coastal_defence_manufacturer:0 "Coastal Defence Manufacturer"
+ BMP_palestine_railways:0 "Palestine Railways"
+ BMP_palestine_electric_company:0 "Palestine Electric Company"
+ BMP_orde_wingate1:0 "Orde Wingate"
+ #BMP National Spirits
+ BMP_jewish_militias1:0 "Jewish Militias"
+ BMP_jewish_militias:0 "Jewish Militias"
+ BMP_jewish_militias1_desc:0 "To assist the Palestine Police Force in putting down the Arab revolt, we have recruited Jews into Mandate-sponsored militias."
+ BMP_fortify_the_mandate:0 "Fortify the Mandate"
+ BMP_fortify_the_mandate_desc:0 "To prepare for the eventuality of war, we have allocated resources for constructing fortifications."
+ BMP_jewish_immigration:0 "Jewish Immigration"
+ BMP_jewish_immigration_desc:0 "The Mandate, each year, accepts a quota of Jews from around the world to settle the land. They mainly come from Europe. Regardless of their origins, the native Arabs are displeased by their settling."
+ BMP_limited_jewish_immigration:0 "Limited Jewish Immigration"
+ BMP_limited_jewish_immigration_desc:0 "Following a change in policy, we have reduced the amount of Jews allowed into the Mandate each year. This may anger some Jews at least until we find a common enemy"
+ BMP_arab_revolt:0 "Arab Revolt"
+ BMP_arab_revolt_desc:0 "The tension in the Mandate has reached such a level that outright revolts are commonplace. Both Arabs and Jews have organized and formed armed militias. Under these circumstances, we will have difficulty managing our internal affairs, and fighting a war will be virtually impossible."
+ BMP_encourage_refugee_smuggling:0 "Encourage Refugee Smuggling"
+ BMP_encourage_refugee_smuggling_desc:0 "In spite of strict quotas, more and more Jews flood into the Mandate. Countless Jewish-run organizations have been working to encourage this. Some may even be working with Zionist sympathizers from within the Mandate government."
+ BMP_British_Rule:0 "British Rule"
+ BMP_British_Rule_desc:0 "The United Kingdom governs us from across the seas, limiting our freedoms and our voice"
+ BMP_death_of_izz_ad-din_al-qassam:0 "Death of Izz ad-Din al-Qassam"
+ BMP_death_of_izz_ad-din_al-qassam_desc:0 "Izz ad-Din al-Qassam died on the 20th of November in 1935 after a firefight with British police forces. His fame as an advocate against French rule in Syria, as well as British rule in Palestine-Transjordan, has led to an unexpected thousands of mourners accompanying his coffin to his grave. This may be indicative of problems ahead."
+ BMP_arab_general_strikes:0 "Arab General Strike"
+ BMP_arab_general_strikes_desc:0 "Following our refusal to respond to Arab dissatisfaction with our policies, especially those allowing Jews into the Mandate, the Palestinian Arabs have coordinated a General Strike. This will considerably hamper our ability to maintain order in the Mandate, as well as limit our industrial potential."
+ BMP_peel_commission:0 "Peel Commission"
+ BMP_peel_commission_desc:0 "The British have sent Lord Peel to head a commission investigating the cause of the troubles within the Mandate. Luckily, the chaos of the revolts and the General Strike seem to have subsided during the investigation. The commission is expected to publish its report in April."
+ BMP_Riots:0 "Riots"
+ BMP_Riots_desc:0 "the nation is almost in a state of outright revolt, some sembalance of order must be restored at once!"
+ #ISR Advisors
+ ISR_generic_fascist_demagogue:0 "Abba Ahimeir"
+ ISR_generic_democratic_reformer:0 "David Ben-Gurion"
+ ISR_generic_communist_revolutionary:0 "Meir Vilner"
+ ISR_dov_yosef:0 "Dov Yosef"
+ ISR_abba_eban:0 "Abba Eban"
+ ISR_mordechai_maklef:0 "Mordechai Maklef"
+ ISR_david_ben-gurion:0 "David Ben Gurion"
+ ISR_yagil_alon:0 "Yigal Alon"
+ ISR_ezer_weizman:0 "Ezer Weizman"
+ ISR_ariel_sharon:0 "Ariel Sharon"
+ ISR_mickey_marcus:0 "Mickey Marcus"
+ ISR_david_shaltiel:0 "David Shaltiel"
+ ISR_moshe_dayan:0 "Moshe Dayan"
+ ISR_coastal_defence_manufacturer:0 "Coast Defense Manufacturer"
+ ISR_israel_railways:0 "Israel Railways"
+ ISR_israel_electric_corporation:0 "Israel Electronic Corporation"
+ ISR_yitzhak_rabin:0 "Yitzhak Rabin"
+ ISR_ernst_david_bergmann:0 "Ernst David Bergmann"
+ #ISR National Spirit
+ ISR_jewish_immigration:0 "Jewish Immigration"
+ ISR_jewish_immigration_desc:0 "Whether they seek to return to their homeland, escape persecution, or flee from war-ravaged Europe, Jews from around the world come to Israel."
+ ISR_unexpected_war:0 "Unexpected War"
+ ISR_unexpected_war_desc:0 "Many of our citizens were expecting to leave British rule peacefully. Now they protest the war effort, lowering morale wherever they go."
+ ########## IRAQ
+ ###Ideas###
+ IRQ_iraqi_navy:0 "River Dockyards"
+ IRQ_iraqi_navy_desc:0 "Our small coast does not allow us to build dockyards, our only option is to build dockyards on the Tigris and Euphrates Rivers."
+ IRQ_nationalism:0 "Free Iraq Movement"
+ IRQ_nationalism_desc:0 "The people seek freedom they are tired of imperialist nations meddling in our affairs, invading our sacred lands and usurping our natural resources."
+ IRQ_simele:0 "Simele Massacre"
+ IRQ_simele_desc:0 "The Simele massacre was a massacre committed by the armed forces of the Kingdom of Iraq led by Bakr Sidqi during a campaign systematically targeting the Assyrians of northern Iraq in August 1933. The term is used to describe not only the massacre in Simele, but also the killing spree that took place among 63 Assyrian villages in the Dohuk and Mosul districts that led to the deaths of between 5,000 and 6,000 Assyrians."
+ IRQ_simele2:0 "Simele Massacre"
+ IRQ_simele2_desc:0 "The Simele massacre was a massacre committed by the armed forces of the Kingdom of Iraq led by Bakr Sidqi during a campaign systematically targeting the Assyrians of northern Iraq in August 1933. The term is used to describe not only the massacre in Simele, but also the killing spree that took place among 63 Assyrian villages in the Dohuk and Mosul districts that led to the deaths of between 5,000 and 6,000 Assyrians."
+ IRQ_revolt:0 "Shia Revolts"
+ IRQ_revolt_desc:0 "1935 Rumaytha and Diwaniyya revolt or the 1935–1936 Iraqi Shia revolts consisted of a series of Shia tribal uprisings in the mid-Euphrates region against the Sunni dominated authority of the Kingdom of Iraq."
+ #In each revolt, the response of the Iraqi government was to use military force to crush the rebellions with little mercy. #removed because now the player does it or can choose not to
+ IRQ_treaty:0 "Anglo-Iraqi treaty"
+ IRQ_treaty_desc:0 "The Anglo-Iraqi treaty grants the United Kingdom free movement through our country and access to our oil reserves, in exchance they offer some military development. However the unequal terms of the treaty led to a undercurrent of resentment"
+ IRQ_ambushed_1:0 "Iraqi Ambush!"
+ IRQ_ambushed_1_desc:0 "The Iraq forces have caught us completely offguard, it will take time before we can mount an effective counterattack"
+ IQR_prepare_for_war:0 "Set up an ambush"
+ IQR_prepare_for_war_desc:0 "we can position a number of our forces ready to sieze arms and strike at the British and their allies"
+ IRQ_can_prepare_more_tt:0 "There are more positions we can occupy before we strike, the more we plan the better our ambush will be"
+ IRQ_Ambush:0 "Ambush the British!"
+ IRQ_Ambush_desc:0 "Let us drive these scum from our lands for the glory of IRAQ!"
+ ###Ministers###
+ IRQ_ali_abn_hussein:0 "Ali Abn Hussein"
+ IRQ_nuri_as_said:0 "Nuri as Said"
+ IRQ_amir_al_illah:0 "Amir al Illah"
+ IRQ_rashid_ali_al_gaylani:0 "Rashid Ali al-Gaylani"
+ IRQ_fawzi_alq_awuqji:0 "Fawzi al-Qawuqji"
+ IRQ_abd_al_karim_qasim:0 "Abdul Karim Kassem"
+ IRQ_amin_al_husseini:0 "Amin al-Husayni"
+ IRQ_khaled_al_dalabeeh:0 "Khaled al Dalabeeh"
+ IRQ_abdullah_al-tell:0 "Abdullah al-Tell"
+ IRQ_mahmud_salman:0 "Mahmud Salman"
+ IRQ_jamil_al_midfai:0 "Jamil al Midfai"
+ IRQ_hamdi_al_pachachi:0 "Hamdi al Pachachi"
+ IRQ_ali_mahmud_al_shaykh:0 "Ali Mahmud al Shaykh"
+ IRQ_fahmi_said:0 "Fahmi Sa'id"
+ IRQ_bakr_sidqi:0 "Bakr Sidqi"
+ IRQ_taha_al_ahmani:0 "Taha al Ahmani"
+ IRQ_mustafa_al_quidsi:0 "Mustafa al-Qudsi"
+ IRQ_iskandar_al-shami:0 "Iskandar al-Shami"
+ IRQ_ali_ben_jawad:0 "Ali ben Jawad"
