AI tweaks for common Arab focus, a few new focus options to add players

--- a/localisation/focus_mer_l_english.yml
+++ b/localisation/focus_mer_l_english.yml
@@ -33,10 +33,18 @@
  Arab_Mining_Operations_desc:0 "Mining Operations"
  Arab_Trade_More:0 "International Trade"
  Arab_Trade_More_desc:0 "Trade is vital to the health of our nation"
+ Arab_Trade_less:0 "Restricted Trading"
+ Arab_Trade_less_desc:0 "We would be fools to give all our resources away, we must ensure we have enough for our people before trading with others"
  Arab_Road:0 "Roads to the Capital"
  Arab_Road_desc:0 "Access to the Capital is poor, we should expand our road network in the region"
  Arab_construction:0 "Construction in the Capital"
  Arab_construction_desc:0 "Encouraging the civilain economy in our capital will bring great rewards"
+ Arab_land:0 "Land developement"
+ Arab_land_desc:0 "Much of our countryside lies undeveloped and unsuited for industry, with advances in machines we can change that"
+ Arab_construction2:0 "Glass Works"
+ Arab_construction2_desc:0 "The construction of a new glass manafacturing plant will aid our economy"
+ Arab_Steel:0 "Ironworks"
+ Arab_Steel_desc:0 "Let us build a new foundry to power our industry"
  Arab_Industry:0 "Industry modernisation"
  Arab_Industry_desc:0 "Our industry is well behind the modern world, we must invest in new and improved methods"
  Arab_Market_Reforms:0 "Market Reforms"
